# PDESolvers

./: README.md  requirements.txt  setup.py
.github/workflows/: ci.yml
GPUSolver/: CMakeLists.txt  README.md  main.cu
GPUSolver/gpu/: bse_solvers_parallel.cuh  common.cuh  gbm_parallel.cuh
GPUSolver/playground/: gbm_parallel.cu
GPUSolver/tests/: CMakeLists.txt  test_bse_solvers_parallel.cu
ci/: run_tests.sh
minutes/: Meeting_Minutes_10thJan25.docx  Meeting_Minutes_12thNov24.docx  Meeting_Minutes_14thJan25 .docx  Meeting_Minutes_16thOct24.docx  Meeting_Minutes_18thOct24.docx  Meeting_Minutes_19thNov24.docx  Meeting_Minutes_21stJan25  .docx  Meeting_Minutes_25thOct24.docx  Meeting_Minutes_26thNov24.docx  Meeting_Minutes_29thOct24.docx  Meeting_Minutes_2ndOct24.docx  Meeting_Minutes_5thNov24.docx  Meeting_Minutes_8thOct24.docx
pdesolvers/optionspricing/: black_scholes_formula.py  market_data.py  monte_carlo.py
pdesolvers/solution/: solution.py
pdesolvers/solvers/: __init__.py  black_scholes_solvers.py  heat_solvers.py  solver.py
pdesolvers/tests/: test_black_scholes.py  test_options_pricing.py
pdesolvers/utils/: utility.py
playground/: brownian_motion.py  export.sh  geometric_brownian_motion.py  plot_csv.py  plot_results_csv.py
